fix: canceled overflow hidden of page

--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -9,5 +9,4 @@
   padding: 45px 19px 60px;
 
   box-sizing: border-box;
-  overflow: hidden;
 }
